--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 	<header class="topbar">
 		<div class="topbar__container">
 			<a href="/" class="topbar__logo">
-				{% if variables.topbar_logo %}
+				<!-- {% if variables.topbar_logo %}
 				<img src="{{{variables.topbar_logo}}}" alt="Logo" />
-				{% endif %}
-
+				{% endif %} -->	
+				CITY
 			</a>
 
 			<input id="topbar__toogle" type="checkbox" />
@@ -88,115 +88,47 @@
 		<div class="footer__container">
 			<div class="footer__logo">
 				<a href="/">
-					{% if variables.footer_logo %}
+					<!-- {% if variables.footer_logo %}
 					<img src="{{{variables.footer_logo}}}" alt="Logo" />
-					{% endif %} </a>
+					{% endif %}  -->
+					CITY
+				</a>
 			</div>
 			<div class="footer__main footer-main">
 				<div class="footer-main__menu footer-menu">
 
-					{% if footer.contents.length %}
 					<div class="footer-menu__block">
-						<span class="footer-menu__title">{{{translate('ThemeArtemVelihin.Contents')}}}</span>
+						<a href="/services" class="footer-menu__title">{{{translate('ThemeArtemVelihin.Places')}}}</a>
 						<ul class="footer-menu__list">
 
-							{% for content in footer.contents %}
 
 							<li class="footer-menu__item">
-								<a href="{{{content.url}}}" class="footer-menu__link">{{{content.name}}}</a>
+								<a href="/service" class="footer-menu__link">Place One</a>
+							</li>
+							<li class="footer-menu__item">
+								<a href="/service" class="footer-menu__link">Place Two</a>
 							</li>
 
-							{% endfor %}
+							<li class="footer-menu__item">
+								<a href="/service" class="footer-menu__link">Place Three</a>
+							</li>
+						</ul>
+					</div>
+					<div class="footer-menu__block">
+						<span class="footer-menu__title">{{{translate('ThemeArtemVelihin.Home')}}}</span>
+						<ul class="footer-menu__list">
+
+
+							<li class="footer-menu__item">
+								<a href="{{{content.url}}}" class="footer-menu__link">Contact</a>
+							</li>
+							<li class="footer-menu__item">
+								<a href="{{{content.url}}}" class="footer-menu__link">Portfolio</a>
+							</li>
+
 
 						</ul>
 					</div>
-					{% endif %}
-
-					{% if footer.plans.length %}
-					<div class="footer-menu__block">
-						<a href="/plans" class="footer-menu__title">{{{translate('ThemeArtemVelihin.Plans')}}}</a>
-						<ul class="footer-menu__list">
-
-							{% for plan in footer.plans %}
-
-							<li class="footer-menu__item">
-								<a href="/plan" class="footer-menu__link">{{{plan.name}}}</a>
-							</li>
-
-							{% endfor %}
-
-						</ul>
-					</div>
-					{% endif %}
-
-					{% if footer.services.length %}
-					<div class="footer-menu__block">
-						<a href="/services" class="footer-menu__title">{{{translate('ThemeArtemVelihin.Services')}}}</a>
-						<ul class="footer-menu__list">
-
-							{% for service in footer.services %}
-
-							<li class="footer-menu__item">
-								<a href="/service" class="footer-menu__link">{{{service.name}}}</a>
-							</li>
-
-						{% endfor %}
-
-						</ul>
-					</div>
-					{% endif %}
-
-					{% if footer.cars.length %}
-					<div class="footer-menu__block">
-						<a href="/cars" class="footer-menu__title">{{{translate('ThemeArtemVelihin.Cars')}}}</a>
-						<ul class="footer-menu__list">
-
-							{% for car in footer.cars %}
-
-							<li class="footer-menu__item">
-								<a href="/car" class="footer-menu__link">{{{car.name}}}</a>
-							</li>
-
-						{% endfor %}
-
-						</ul>
-					</div>
-					{% endif %}
-
-					{% if footer.realestates.length %}
-					<div class="footer-menu__block">
-						<a href="/realestates" class="footer-menu__title">{{{translate('ThemeArtemVelihin.Real estates')}}}</a>
-						<ul class="footer-menu__list">
-
-							{% for realestate in footer.realestates %}
-
-							<li class="footer-menu__item">
-								<a href="/realestate" class="footer-menu__link">{{{realestate.name}}}</a>
-							</li>
-
-						{% endfor %}
-
-						</ul>
-					</div>
-					{% endif %}
-					
-
-					{% if footer.articles.length %}
-					<div class="footer-menu__block">
-						<a href="/articles" class="footer-menu__title">{{{translate('ThemeArtemVelihin.Articles')}}}</a>
-						<ul class="footer-menu__list">
-
-							{% for article in footer.articles %}
-
-							<li class="footer-menu__item">
-								<a href="/article" class="footer-menu__link">{{{article.name}}}</a>
-							</li>
-
-						{% endfor %}
-
-						</ul>
-					</div>
-					{% endif %}
 
 				</div>
 
